# pros-branchline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  main.yaml
build_depot/: __init__.py  build_depot.py  schema.py
build_depot/validation/: template.schema.yaml
templates/: libhotel.yaml.sample
