[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'pros-branchline'
dependencies = [
    'jsonpath-ng',
    'jsonpickle',
    'jsonschema',
    'pros-cli',
    'PyYAML',
    'semantic-version',
]
dynamic = ['version']

[project.scripts]
build-depot = 'build_depot:main'

[tool.setuptools]
packages = ['build_depot', 'build_depot.validation']

[tool.setuptools.package-data]
'build_depot.validation' = ['*.yaml']

[tool.setuptools.dynamic]
version = {attr = 'build_depot.__version__'}